app/assets/stylesheets/custom/global.scss
// GLOBAL SETTINGS
// ===============
.fill-page{
  min-height: calc(100vh - #{$nav-height});
}
$mygrey: #fbfbfb;
$mypink: #f5f2f2;


$color1: #f3f0ed;
$color2: #ece9e7;

// text highlight is yellow
::selection {
    background: #fff2a8; /* WebKit/Blink Browsers */
  }
::-moz-selection {
  background: #fff2a8; /* Gecko Browsers */
}

// prevent right-clicking images
img {
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -o-user-select: none;
  user-select: none;
}

// CUSTOM GENERIC CLASSES
// ======================

.border{
  border: 1px solid red;
}

.reverse-row-order{
  flex-direction:row-reverse;
}

.fill-page-height{
  @include from($tablet){
    height: calc(100vh - #{$nav-height});
    min-height: calc(100vh - #{$nav-height});
    margin-bottom: 0!important;
  }
}

.standard-page{
  background-color: $mygrey;
  padding-top: 3.5em;
  padding-bottom: 3.5em;
  // color: $black;
  font-family: 'Carlson', 'Georgia';
  a{
    color: $grey;
    &:hover{
      color: $grey-dark;
    }
  }
}

h2{
  font-size: 1.3em;
  margin-bottom: 1em;
}

.button{
  font-family: 'Helvetica Neue', 'Helvetic';
  font-size: 0.8em;
}

.mysubtite{
  font-family: 'Helvetica Neue', 'Helvetic'!important;
}

// NAVIGATION
// ==========

.fixed-nav-container{
  position: relative;
  .nav{
    background: none;
    position: absolute; top: 0; left: 0; right: 0;
    z-index: 1001;
  }
}

.hamburger{
  @include hamburger($nav-height);
}

header.nav .nav-menu{
  width: 40%;
  font-family: 'Garamond', 'Times';
  z-index: 1001;
}
.nav-menu .nav-item{
  flex-grow: 1;
  font-size: 1em;
}

// .myicon{
//   margin: auto;
//   .fa{ font-size: 0.8em!important;}
// }
// .cart-icon{
//   margin-left: 5px;
// }

// FORMS
// =====

.sign-in-form{
  position: relative;
  margin: 0 auto;
  max-width: 400px;
}

.standard-form{
  // position: relative;
  // margin: 0 auto;
  // max-width: 500px;
}

// hide radio button and make image selectable
.radio-button-images{
  label > input{ /* HIDE RADIO */
    visibility: hidden; /* Makes input not-clickable */
    position: absolute; /* Remove input from document flow */
  }
  label > input + img{ /* IMAGE STYLES */
    cursor:pointer;
    border:2px solid transparent;
    width: 35px;
    height: 35px;
    margin-right: 10px;
  }
  label > input:checked + img{ /* (RADIO CHECKED) IMAGE STYLES */
    border:2px solid #fff2a8;
  }
}

// inline checkbox
label.checkbox{
  font-size: 0.8em;
  input{
    margin-right: 5px;
    margin-left: 1px;
  }
}

// date picker
.ui-datepicker{
  background: rgb(255, 255, 255);
  padding: 10px;
  border: 1px solid black;
  display: none;
  .ui-datepicker-calendar{
    th{
      padding-right: 15px;
    }
  }
  .ui-datepicker-header{
    padding-top: 5px;
    padding-bottom: 10px;
    border-bottom: 1px solid $grey-light;
    margin-bottom: 10px;
  }
  .ui-datepicker-title{
    display: inline-block;
    float: right;
  }
  .ui-datepicker-prev{
    margin-right: 10px;
  }
}


// NAV
// ===

.cbp-spmenu {
  // background: #47a3da;
  position: fixed;
}

.cbp-spmenu h3 {
  // color: #afdefa;
  // font-size: 1.9em;
  // padding: 20px;
  // margin: 0;
  // font-weight: 300;
  // background: #0d77b6;
}

.cbp-spmenu a {
  // display: block;
  // color: #fff;
  // font-size: 1.1em;
  // font-weight: 300;
}

.cbp-spmenu a:hover {
  // background: #258ecd;
}

.cbp-spmenu a:active {
  // background: #afdefa;
  // color: #47a3da;
}

/* Orientation-dependent styles for the content of the menu */

.cbp-spmenu-vertical1 {
  width: 240px;
  height: 100%;
  top: 0;
  z-index: -1;
  font-family: 'Garamond', 'Times';
}

.main-site-nav-inner{
  display: flex;
  height: 100%;
  #site-nav{
    margin: auto;
    .nav-item{
      font-size: 1.1em;
    }
  }
  .contents-block{
    padding: 5px;
  }
}

.cbp-spmenu-vertical2 {
  width: 280px;
  height: 100%;
  top: 0;
  z-index: 1;
  border-left: 1px solid $grey;
}
.contents-nav{
  display: flex;  height: 100%;
  #sidebar{
    margin: auto;
  }
  .contents-block{
    padding: 5px;
  }
}

.cbp-spmenu-vertical a {
  border-bottom: 1px solid #258ecd;
  padding: 1em;
}


/* Vertical menu that slides from the left or right */

.cbp-spmenu-left {
  left: -240px;
}

.cbp-spmenu-right {
  right: -280px;
}

.cbp-spmenu-left.cbp-spmenu-open {
  left: 0px;
}

.cbp-spmenu-right.cbp-spmenu-open {
  right: 0px;
}


/* Push classes applied to the body */

.cbp-spmenu-push {
  // overflow-x: hidden;
  position: relative;
  left: 0;
}

.cbp-spmenu-push-toright {
  left: 240px;
}

.cbp-spmenu-push-toleft {
  left: -280px;
}

/* Transitions */

.cbp-spmenu,
.cbp-spmenu-push {
  -webkit-transition: all 0.3s ease;
  -moz-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

/* Example media queries */

@media screen and (max-height: 26.375em){

  .cbp-spmenu-vertical {
    font-size: 90%;
    width: 190px;
  }

  .cbp-spmenu-left,
  .cbp-spmenu-push-toleft {
    left: -190px;
  }

  .cbp-spmenu-right {
    right: -190px;
  }

  .cbp-spmenu-push-toright {
    left: 190px;
  }
}


// FOOTER
.fixed-footer{
  position: absolute;
  top: 102vh;
  left: 0;
  right: 0;
  z-index: 7000;
}

.drop-footer{
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 7000;
}

.myfooter{
  .social{
    text-align: right;
    font-size: 1.2em;
    a{
      color: $grey-light;
      &:hover{
        color: $grey;
      }
    }
    .fa{
      vertical-align: baseline;
    }
    .instagram-icon{
      margin-left: 20px;
    }
  }

  .footer-link{
    @include mobile{
      display: block;
      line-height: 2em;
    }
    display: inline-block;
    margin-right: 20px;
    font-family: 'Helvetica Neue', 'Helvetica';
    font-size: 0.8em;
    a{
      color: $grey;
      &:hover{
        color: $grey-dark;
      }
    }
  }
}

.divider{
  @include mobile{
    display: none;
  }
  display: inline-block;
}

#mobile-navi{
  display: inline-block;
  position: fixed;
  top: 0;
  left: 0;
  &.pushed-right{
    left: 240px;
  }
  z-index: 8000;
  -webkit-transition: all 0.3s ease;
  -moz-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

// newsletter
.newsletter-pop-up{
  position: fixed;
  bottom: 0;
  right: 0;
  width: 400px;
  z-index: 2000;
  @include mobile{
    width: 100%;
    padding-top: 40px;
  }
  padding: 10px 30px;
  border: 1px solid $grey;
  background-color: rgba(255,255,255,0.9);
  border-top-left-radius: 10px;
  border-top-right-radius: 10px;
  .order-form{
    font-family: 'Carlson', 'Georgia';
    margin: 0 auto;
    padding-right: 0;
  }
  .order-form .field-label.is-normal{
    flex-grow: 2;
  }
  .field-body p.control{
    width: 100%;
  }
  .button-container{
    text-align: right;
  }
  a{
    color: $grey-light!important;
    &:hover{
      color: $grey!important;
    }
  }
  ul{
    margin-bottom: 20px;
  }
  .close-newsletter-pop-up{
    position: absolute;
    top: 0px;
    right: 0px;
    padding: 10px 20px;
    cursor: pointer;
    color: $grey-light!important;
    &:hover{
      color: $grey!important;
    }
  }
}

